--- a/css/simple.css
+++ b/css/simple.css
@@ -29,3 +29,11 @@ ul { margin-bottom: 20px; padding-left: 20px;}
 li { line-height: 18px; margin-bottom: 12px; }
 ul.square { list-style: square outside; margin-left: 0px;}
 ul ul { margin: 10px 0 5px 20px; font-size: 90%; }
+
+h4 {
+ font-family: "Georgia", "Times New Roman", serif;
+ font-weight: normal;
+ font-size: 20px;
+ line-height: 22px;
+ color: #222;
+}
