--- a/css/simple.css
+++ b/css/simple.css
@@ -34,6 +34,7 @@ h4 {
  font-family: "Georgia", "Times New Roman", serif;
  font-weight: normal;
  font-size: 20px;
- line-height: 22px;
+ line-height: 26px;
+ margin-bottom: 8px;
  color: #222;
 }
